Updated messages to update client's model (still working).