@@ -10,14 +10,15 @@ import it.polimi.ingsw.server.lobby.messages.serverMessages.ServerMessage;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Class used to send GameBoard updates to the clients.
  */
 public class GameBoardUpdateMessage implements ServerMessage, Serializable {
 
-    private final List<Card> leaderCardDeck;
-    private final List<Card> developmentCardDeck;
+    private final List<LeaderCard> leaderCardDeck;
+    private final List<DevelopmentCard> developmentCardDeck;
     private final List<Card> discardDeck;
 
     /**
@@ -26,13 +27,13 @@ public class GameBoardUpdateMessage implements ServerMessage, Serializable {
      * @param gameBoard faithTrack for the update.
      */
     public GameBoardUpdateMessage(GameBoard gameBoard) {
-        this.leaderCardDeck = gameBoard.getLeaderDeck().toList();
-        this.developmentCardDeck = gameBoard.getDevelopmentDeck().toList();
+        this.leaderCardDeck = gameBoard.getLeaderDeck().toList().stream().map(card -> (LeaderCard) card).collect(Collectors.toList());
+        this.developmentCardDeck = gameBoard.getDevelopmentDeck().toList().stream().map(card -> (DevelopmentCard) card).collect(Collectors.toList());
         this.discardDeck = gameBoard.getDiscardDeck().toList();
     }
 
     @Override
     public void updateClient(ClientConnection clientConnection, String nickname) {
-        // TODO clientConnection.updateGameBoard(leaderCardDeck, developmentCardDeck, discardDeck);
+        clientConnection.updateReducedGameBoard(leaderCardDeck, developmentCardDeck, discardDeck);
     }
 }
